k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: parking
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: habur331/spda-parking:0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 1111
        resources:
          limits:
            cpu: "2"
            memory: 2000Mi
          requests:
            cpu: "0.2"
            memory: 1500Mi
