k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: parking
spec:
  selector:
    app: backend
  ports:
    - port: 5678
      targetPort: 1111
  type: ClusterIP
