k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: parking
spec:
  selector:
    app: frontend
  ports:
    - port: 5678
      targetPort: 3000
  type: ClusterIP
